@@ -1,0 +1,4 @@
+#Internet explorer
+agentName: msie
+acceptEncodingOld: deflate
+acceptEncodingNew: deflate-no-wrap
